[package]
name = "display_tree"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple, automatic, and customizable tree pretty-printing"
keywords = ["tree", "pretty-print", "derive", "formatting"]
categories = ["value-formatting", "data-structures"]
repository = "https://github.com/captain-camel/display_tree"

[dependencies]
display_tree_derive = { path = "display_tree_derive", version = "1.0.2"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html