[package]
name = "display_tree_derive"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macro for `display_tree` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.105"
quote = "1.0.21"
proc-macro2 = "1.0.47"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true